# omniintelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yml  ci.yml  code-review-bot.yml  omni-standards-compliance.yml  release.yml
_golden_path_validate/: node_intelligence_reducer.json  node_llm_routing_decision_effect.json  node_pattern_feedback_effect.json  node_routing_feedback_effect.json
configs/: rl_training_manifest.yaml
deployment/database/migrations/: 020_plan_reviewer_accuracy_and_runs.sql  023_create_debug_intelligence_tables.sql  024_add_agent_name_to_objective_evaluations.sql  025_review_calibration_runs.sql
deployment/database/migrations/rollback/: 020_rollback.sql  025_rollback.sql
deployment/docker/: docker-compose.nodes.yml
docs/architecture/: contract-package-spec.md
scripts/: backfill_pattern_projection.py  check_no_untyped_metadata.py  generate_node_report.py  infer_contracts.py  report_node_families.py  run_promotion_check.py  scan_four_node_pattern.py  seed_learned_patterns.py  validate_ci_precommit_alignment.py
scripts/validation/: lint_topic_names.py  run_topic_lint.sh  topic_naming_baseline.txt  validate_clean_root.py
src/omniintelligence/: __init__.py  constants.py  topics.py
src/omniintelligence/adapters/: adapter_kafka.py
src/omniintelligence/api/: model_pattern_query_response.py
src/omniintelligence/audit/: README.md
src/omniintelligence/bloom_eval_cli/: __init__.py  __main__.py
src/omniintelligence/clients/: __init__.py  eval_llm_client.py  plan_reviewer_gemini_client.py  plan_reviewer_z_ai_client.py  utilization_llm_client.py
src/omniintelligence/debug_intel/: __init__.py  adapter_debug_store.py  debug_store.repository.yaml  protocols.py  topics.py
src/omniintelligence/decision_store/: __main__.py
src/omniintelligence/enums/: enum_error_taxonomy.py
src/omniintelligence/model_selector/: episode_emitter.py
src/omniintelligence/models/: model_intelligence_output.py
src/omniintelligence/models/events/: model_llm_call_completed_event.py  model_pattern_discovered_event.py
src/omniintelligence/nodes/node_agent_behavior_eval_compute/: contract.yaml  node.py
src/omniintelligence/nodes/node_ast_extraction_compute/: __init__.py  contract.yaml  node.py
src/omniintelligence/nodes/node_bloom_eval_orchestrator/: contract.yaml
src/omniintelligence/protocols/: __init__.py
src/omniintelligence/repositories/: adapter_code_entity_store.py  adapter_pattern_store.py  learned_patterns.repository.yaml
src/omniintelligence/review_pairing/: calibration_persistence.py  calibration_scorer.py  cli_review.py  cli_review_models.py  fewshot_extractor.py  models_calibration.py  models_external_review.py  persona_loader.py  serializer_r1r6.py
src/omniintelligence/rl/: __init__.py  buffer.py  checkpoint.py  config.py  emit.py  export.py  export_scenarios.py  manifest.py  policy.py  rewards.py  train.py  trainer.py
src/omniintelligence/runtime/: contract_topics.py  dispatch_handler_code_analysis.py  dispatch_handler_code_crawl.py  dispatch_handler_code_embed_graph.py  dispatch_handler_code_embedding.py  dispatch_handler_code_enrichment.py  dispatch_handler_code_entity_bridge.py  dispatch_handler_code_extract.py  dispatch_handler_code_persist.py  dispatch_handler_code_quality.py  dispatch_handler_crawl_scheduler.py  dispatch_handler_graph_storage.py  dispatch_handler_pattern_learning.py  dispatch_handler_promotion_check.py  dispatch_handler_routing_feedback.py  dispatch_handlers.py  handler_llm_cost_emitter.py  introspection.py  model_event_bus_config.py  model_intelligence_runtime_config.py  model_schema_manifest.py  stub_launcher.py  wiring.py
src/omniintelligence/tools/: README.md
tests/audit/: io_audit_whitelist.yaml
tests/ci/: test_pattern_pipeline_health.py
tests/integration/: test_llm_call_completed_e2e.py  test_promotion_lifecycle_integration.py
tests/integration/runtime/: test_auto_wiring_replaces_hardcoded_list.py  test_intelligence_auto_wiring_e2e.py  test_kernel_boot_wiring.py
tests/nodes/node_agent_behavior_eval_compute/: test_handlers.py
tests/nodes/node_contract_eval_compute/: test_handlers.py
tests/nodes/node_memory_eval_compute/: test_handlers.py
tests/scripts/: test_check_no_untyped_metadata.py
tests/unit/: test_dispatch_parity.py  test_omnidash_topic_registry.py
tests/unit/bloom_eval/: test_cli.py  test_topic_registration.py
tests/unit/clients/: test_eval_llm_client_event_emission.py
tests/unit/debug_intel/: test_topics.py
tests/unit/models/: test_model_llm_call_completed_event.py
tests/unit/repositories/: test_adapter_code_entity_store.py  test_query_patterns_projection.py
tests/unit/review_pairing/: test_calibration_persistence.py  test_calibration_scorer.py  test_cli_review.py  test_cli_review_models.py  test_fewshot_extractor.py  test_models_calibration.py  test_persona_loader.py  test_personas.py  test_serializer_r1r6.py
tests/unit/rl/: test_buffer.py  test_export.py  test_pipeline_observation_builder.py  test_pipeline_pipeline.py  test_routing_pipeline.py  test_team_observation_builder.py  test_team_pipeline.py  test_trainer.py  test_unified_train_cli.py
tests/unit/runtime/: test_contract_event_bus_enabled.py  test_contract_topics.py  test_dispatch_handler_code_analysis.py  test_dispatch_handler_code_crawl.py  test_dispatch_handler_code_embedding.py  test_dispatch_handler_code_enrichment.py  test_dispatch_handler_code_entity_bridge.py  test_dispatch_handler_code_pipeline.py  test_dispatch_handler_graph_storage.py  test_dispatch_handler_pattern_learning.py  test_dispatch_handler_promotion_check.py  test_dispatch_handlers.py  test_golden_chain_routing_feedback.py  test_handler_llm_cost_emitter.py  test_introspection.py  test_lifecycle_transition_kafka_emission.py  test_pattern_stored_triggers_projection.py  test_plugin_dispatch.py  test_projection_handler_registration.py
tests/unit/utils/: __init__.py
(+207 files in other folders)
