# SPDX-FileCopyrightText: 2025 OmniNode.ai Inc.
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# DEPENDENCY MANAGEMENT NOTES
# This project uses uv/PEP 621 dependency management.
#
# EDITABLE INSTALLS & uv.lock:
#   Editable installs (pip install -e .) bypass uv.lock resolution.
#   To verify reproducibility after editable install changes:
#     1. Remove uv.lock: rm uv.lock
#     2. Regenerate: uv lock
#     3. Verify sync: uv sync --group dev

[project]
name = "omninode-intelligence"
version = "0.11.0"
description = "Intelligence, indexing, and pattern services as first-class Omninode nodes"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [{ name = "OmniNode.ai", email = "contact@omninode.ai" }]
keywords = ["omninode", "intelligence", "intent", "routing", "onex", "llm"]
# Versions aligned with [dependency-groups].core for consistency
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "confluent-kafka>=2.12.0,<3.0.0",
    "tenacity>=8.2.0",
    "watchdog>=6.0.0",
    "adaptive-classifier>=0.1.2",
    "omnibase-infra==0.16.2",
]

[project.optional-dependencies]
# Optional analysis backend for accurate McCabe cyclomatic complexity (OMN-1452)
# Install with: pip install omniintelligence[analysis]
analysis = [
    "radon>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/OmniNode-ai/omniintelligence"
Repository = "https://github.com/OmniNode-ai/omniintelligence"
Documentation = "https://github.com/OmniNode-ai/omniintelligence/tree/main/docs"
Issues = "https://github.com/OmniNode-ai/omniintelligence/issues"
Changelog = "https://github.com/OmniNode-ai/omniintelligence/blob/main/CHANGELOG.md"

[project.entry-points."onex.domain_plugins"]
intelligence = "omniintelligence.runtime.plugin:PluginIntelligence"

[tool.hatch.build.targets.wheel]
packages = ["src/omniintelligence"]

[dependency-groups]
# Development dependencies for linting and testing
# Versions aligned with [tool.poetry.group.dev.dependencies] for consistency
dev = [
    "mypy>=1.17.0",
    "types-PyYAML>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.12.5",
    "requests>=2.31.0",
    "factory-boy>=3.3.0",
    "pre-commit>=4.5.0",
    # Optional radon dependency included in dev for test coverage of radon code path
    "radon>=6.0.0",
]

# Core node system dependencies
# Version constraints aligned with caret syntax:
#   ^0.20.0 = >=0.20.0,<0.21.0  (compatible releases within 0.20.x)
#   ^0.14.0 = >=0.14.0,<0.16.0  (relaxed to allow 0.15.x, see OMN-3549)
#   ^0.11.0 = >=0.11.0,<0.12.0  (compatible releases within 0.11.x)
core = [
    # ONEX private ecosystem dependencies (NOT on public PyPI)
    # Installed via editable installs from sibling repos or private registry.
    # Version bounds match Poetry caret syntax above.
    "omnibase-core==0.24.2",
    "omnibase-spi==0.15.2",
    "omnibase-infra==0.16.2",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    # Web framework for API endpoints
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    # Event bus (Kafka/Redpanda)
    "aiokafka>=0.11.0,<0.14.0",
    "confluent-kafka>=2.12.0,<3.0.0",
    # Vector database
    "qdrant-client>=1.15.1",
    # Graph database
    "neo4j>=5.28.2",
    # PostgreSQL
    "asyncpg>=0.29.0",
    # Document processing
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.6",
    "python-docx>=1.1.2",
    "markdown>=3.8",
    # AI/ML
    "openai>=1.71.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
    # Utilities
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "redis[hiredis]>=5.0.0",
    # Logging and monitoring
    "logfire>=0.30.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

# All dependencies for development and testing
# Uses include-group (PEP 735) to compose from core and dev groups
# This eliminates duplication and prevents version drift between groups
all = [
    {include-group = "core"},
    {include-group = "dev"},
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "W",     # pycodestyle warnings
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "RUF",   # Ruff-specific rules
]
ignore = [
    "S101",   # Allow assert statements in tests
    "E501",   # Allow line length violations (line length handled by ruff format)
    "E402",   # Allow imports not at top (tests need sys.path setup, legacy emits warnings)
    "B904",   # Allow raise without from in exception handlers
    "B019",   # Allow lru_cache on methods (used carefully for singleton patterns)
    "B007",   # Allow unused loop control variables
    "N812",   # Allow lowercase imported as non-lowercase
    "N815",   # Allow mixedCase variables
    "N806",   # Allow non-lowercase variable in function
    "N805",   # Allow cls as first argument
    "UP007",  # Allow Union syntax
    "UP042",  # Allow (str, Enum) inheritance (20 existing classes, migrate to StrEnum later)
    "SIM117", # Allow nested with statements
    "SIM102", # Allow nested if statements (sometimes clearer than combining)
    "SIM103", # Allow explicit if/else returns (sometimes clearer)
    "B008",   # Allow function call defaults
    "F841",   # Allow unused variables
    "ARG002", # Allow unused method arguments (common in test fixtures)
    "RUF012", # Allow mutable class attributes
    "RUF022", # Allow unsorted __all__ (manual ordering preferred for readability)
]

[tool.ruff.lint.per-file-ignores]
# AST visitor methods must use PascalCase (visit_Import, visit_Call, etc.)
"src/omniintelligence/audit/io_audit.py" = ["N802"]
"tests/unit/test_node_purity.py" = ["N802"]
# BaseHTTPRequestHandler requires do_GET method name
"src/omniintelligence/runtime/stub_launcher.py" = ["N802"]
# __init__.py files re-export for public API
"src/omniintelligence/tools/__init__.py" = ["F401"]
# Test intentionally catches broad exceptions for validation error testing
"tests/nodes/pattern_extraction_compute/test_handlers.py" = ["B017"]

[tool.ruff.lint.isort]
known-first-party = ["omniintelligence"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/omniintelligence/nodes"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "unit: marks tests as unit tests",
    "audit: marks tests as I/O audit enforcement tests",
    "drift: marks tests for intent drift detection logic",
    "smoke: marks tests as pipeline health smoke tests (OBS-001, run every 5 min)",
    "forecast: marks tests for intent cost and latency forecasting logic",
    "baseline: marks tests for historical cost/latency baseline management",
    "intent_graph: marks tests for intent graph accumulation logic",
    "transition: marks tests for intent transition edge accumulation",
]
