# SPDX-FileCopyrightText: 2025 OmniNode.ai Inc.
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# DEPENDENCY MANAGEMENT NOTES
# This project uses uv/PEP 621 dependency management.
#
# EDITABLE INSTALLS & uv.lock:
#   Editable installs (pip install -e .) bypass uv.lock resolution.
#   To verify reproducibility after editable install changes:
#     1. Remove uv.lock: rm uv.lock
#     2. Regenerate: uv lock
#     3. Verify sync: uv sync --group dev

[project]
name = "omninode-intelligence"
version = "0.16.0"
description = "Intelligence, indexing, and pattern services as first-class Omninode nodes"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
authors = [{ name = "OmniNode.ai", email = "contact@omninode.ai" }]
keywords = ["omninode", "intelligence", "intent", "routing", "onex", "llm"]
# Versions aligned with [dependency-groups].core for consistency
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "confluent-kafka>=2.12.0,<3.0.0",
    "tenacity>=8.2.0",
    "watchdog>=6.0.0",
    "adaptive-classifier>=0.1.2",
    "omnibase-infra==0.22.0",
]

[project.optional-dependencies]
# Optional analysis backend for accurate McCabe cyclomatic complexity (OMN-1452)
# Install with: pip install omniintelligence[analysis]
analysis = [
    "radon>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/OmniNode-ai/omniintelligence"
Repository = "https://github.com/OmniNode-ai/omniintelligence"
Documentation = "https://github.com/OmniNode-ai/omniintelligence/tree/main/docs"
Issues = "https://github.com/OmniNode-ai/omniintelligence/issues"
Changelog = "https://github.com/OmniNode-ai/omniintelligence/blob/main/CHANGELOG.md"

[project.entry-points."onex.domain_plugins"]
intelligence = "omniintelligence.runtime.plugin:PluginIntelligence"

[project.entry-points."onex.node_package"]
omniintelligence = "omniintelligence.nodes"

[tool.hatch.build.targets.wheel]
packages = ["src/omniintelligence"]

[dependency-groups]
# Development dependencies for linting and testing
# Versions aligned with [tool.poetry.group.dev.dependencies] for consistency
dev = [
    "mypy>=1.17.0",
    "types-PyYAML>=6.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.12.5",
    "requests>=2.31.0",
    "factory-boy>=3.3.0",
    "pre-commit>=4.5.0",
    # Optional radon dependency included in dev for test coverage of radon code path
    "radon>=6.0.0",
    # Centralized governance hooks (OMN-5135)
    "onex-change-control>=0.1.0",
]

# Core node system dependencies
# Version constraints aligned with caret syntax:
#   ^0.20.0 = >=0.20.0,<0.21.0  (compatible releases within 0.20.x)
#   ^0.14.0 = >=0.14.0,<0.16.0  (relaxed to allow 0.15.x, see OMN-3549)
#   ^0.11.0 = >=0.11.0,<0.12.0  (compatible releases within 0.11.x)
core = [
    # ONEX private ecosystem dependencies (NOT on public PyPI)
    # Installed via editable installs from sibling repos or private registry.
    # Version bounds match Poetry caret syntax above.
    "omnibase-core==0.29.0",
    "omnibase-spi==0.18.0",
    "omnibase-infra==0.22.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    # Web framework for API endpoints
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    # Event bus (Kafka/Redpanda)
    "aiokafka>=0.11.0,<0.14.0",
    "confluent-kafka>=2.12.0,<3.0.0",
    # Vector database
    "qdrant-client>=1.15.1",
    # Graph database
    "neo4j>=5.28.2",
    # PostgreSQL
    "asyncpg>=0.29.0",
    # Document processing
    "pypdf2>=3.0.1",
    "pdfplumber>=0.11.6",
    "python-docx>=1.1.2",
    "markdown>=3.8",
    # AI/ML
    "openai>=1.71.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
    # Utilities
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "redis[hiredis]>=5.0.0",
    # Logging and monitoring
    "logfire>=0.30.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
]

# All dependencies for development and testing
# Uses include-group (PEP 735) to compose from core and dev groups
# This eliminates duplication and prevents version drift between groups
all = [
    {include-group = "core"},
    {include-group = "dev"},
]

[tool.uv.sources]
onex-change-control = { git = "https://github.com/OmniNode-ai/onex_change_control.git", branch = "main" }

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    # ==========================================================================
    # DESIGN CHOICES (intentionally ignored)
    # ==========================================================================
    "S101",      # Allow assert in tests
    "ISC001",    # Implicit string concat conflicts with formatter
    "COM812",    # Trailing comma conflicts with formatter

    # ==========================================================================
    # PRE-EXISTING TECHNICAL DEBT (suppress to unblock standardization)
    # Tracked for incremental cleanup in separate tickets.
    # ==========================================================================
    "E501",      # Line too long (pre-existing, 900+ violations)
    "E402",      # Imports not at top
    "B904",      # Raise without from in except
    "B019",      # lru_cache on methods
    "B007",      # Unused loop variable
    "B008",      # Function call defaults
    "N812",      # Lowercase imported as non-lowercase
    "N815",      # mixedCase variables
    "N806",      # Non-lowercase variable in function
    "N805",      # First arg not cls
    "UP042",     # (str, Enum) inheritance — 20 classes to migrate
    "SIM117",    # Nested with statements
    "SIM102",    # Nested if statements
    "SIM103",    # Explicit if/else returns
    "F841",      # Unused variables
    "ARG002",    # Unused method arguments
    "RUF012",    # Mutable class attrs should be ClassVar
    "RUF022",    # __all__ not sorted
    "BLE001",    # Blind exception catching
    "EM101",     # Exception string literal
    "EM102",     # Exception f-string
    "TRY003",    # Long exception messages
    "TRY300",    # Consider moving to else
    "TRY301",    # Abstract raise to inner function
    "TRY400",    # logging.exception instead of error
    "FBT001",    # Boolean positional arg
    "FBT002",    # Boolean default positional
    "ARG001",    # Unused function argument
    "SLF001",    # Private member access
    "C901",      # Function complexity
    "PLR0911",   # Too many return statements
    "PLR0912",   # Too many branches
    "PLR0913",   # Too many arguments
    "PLR0915",   # Too many statements
    "PLR2004",   # Magic values
    "RET504",    # Unnecessary assign before return
    "RET505",    # Unnecessary elif after return
    "ERA001",    # Commented-out code
    "PTH123",    # Use Path.open()
    "G004",      # Logging uses f-string
    "PGH003",    # Blanket type-ignore
    "S311",      # Random not suitable for crypto
    "T201",      # Print statements (enforced via per-file-ignores for CLIs)
    "INP001",    # Implicit namespace package
    "DTZ001",    # call-datetime-without-tzinfo
    "DTZ003",    # call-datetime-utcnow
    "A002",      # Function arg shadows builtin
    "S110",      # try-except-pass
    "TC003",     # Typing-only stdlib import
    "RUF005",    # Consider unpacking
    "PIE790",    # Unnecessary placeholder
    "TID252",    # Prefer absolute imports
    "PLC0415",   # Import outside top-level
    "UP017",     # datetime.UTC alias
    "RUF059",    # Unused unpacked variable
    "TC001",     # Typing-only first-party import (290+ violations)
    "TC002",     # Typing-only third-party import
    "TC005",     # Empty type-checking block
    "TC006",     # Runtime cast value
    "FBT003",    # Boolean positional value in call
    "PT018",     # Composite assertion in pytest
    "PT023",     # Incorrect mark parentheses
    "PT006",     # Parametrize names wrong type
    "PT001",     # Fixture parentheses style
    "PT012",     # Multiple statements in raises
    "PT017",     # Assert in except
    "PLW0108",   # Unnecessary lambda
    "PLW0603",   # Global statement
    "PLW1510",   # subprocess.run without check
    "PLW2901",   # Redefined loop name
    "TRY004",    # Prefer TypeError
    "TRY201",    # Verbose raise
    "S108",      # Hardcoded temp file
    "S310",      # Suspicious URL open
    "S607",      # Start process with partial path
    "S603",      # Subprocess without shell
    "S102",      # exec builtin
    "S104",      # Hardcoded bind all interfaces
    "S608",      # Hardcoded SQL
    "G201",      # Logging exc_info
    "TRY401",    # Verbose log message
    "DTZ005",    # datetime.now without tzinfo
    "DTZ007",    # strptime without zone
    "DTZ011",    # date.today
    "PTH100",    # os.path.abspath
    "PTH111",    # os.path.expanduser
    "PTH117",    # os.path.isabs
    "PTH120",    # os.path.dirname
    "PTH201",    # Path constructor current directory
    "PIE807",    # Reimplemented container builtin
    "PIE810",    # Multiple starts-ends-with
    "PLR1714",   # Repeated equality comparison
    "PLR5501",   # Collapsible else-if
    "PLC0207",   # Missing maxsplit arg
    "TRY203",    # Useless try-except
    "RUF100",    # Unused noqa
]

[tool.ruff.lint.per-file-ignores]
# AST visitor methods must use PascalCase (visit_Import, visit_Call, etc.)
"src/omniintelligence/audit/io_audit.py" = ["N802"]
"tests/unit/test_node_purity.py" = ["N802"]
# BaseHTTPRequestHandler requires do_GET method name
"src/omniintelligence/runtime/stub_launcher.py" = ["N802"]
# __init__.py files re-export for public API
"src/omniintelligence/tools/__init__.py" = ["F401"]
# Test intentionally catches broad exceptions for validation error testing
"tests/nodes/pattern_extraction_compute/test_handlers.py" = ["B017"]
# Test files — relaxed rules
"tests/**" = ["S101", "S603", "PLR2004", "SLF001", "PT011", "S105", "B017"]
"src/**/node_tests/**" = ["S101", "S603", "PLR2004", "SLF001", "PT011", "S105", "B017"]
# Scripts — may use print() and subprocess
"scripts/**" = ["T201", "S603", "S607", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["omniintelligence"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# Third-party libraries without stubs — per-module overrides
[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "adaptive_classifier.*",
    "watchdog.*",
    "qdrant_client.*",
    "neo4j.*",
    "asyncpg.*",
    "tiktoken.*",
    "sentence_transformers.*",
    "torch.*",
    "transformers.*",
    "cachetools.*",
    "tenacity.*",
    "logfire.*",
    "structlog.*",
    "prometheus_client.*",
    "psutil.*",
    "radon.*",
    "pydantic_settings.*",
    "omnibase_core.*",
    "omnibase_spi.*",
    "omnibase_infra.*",
    "pkg_resources",
]
ignore_missing_imports = true

# Modules not yet strict-ready — relax incrementally
[[tool.mypy.overrides]]
module = [
    "omniintelligence.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "src/omniintelligence/nodes"]
pythonpath = ["src", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "unit: marks tests as unit tests",
    "audit: marks tests as I/O audit enforcement tests",
    "drift: marks tests for intent drift detection logic",
    "smoke: marks tests as pipeline health smoke tests (OBS-001, run every 5 min)",
    "forecast: marks tests for intent cost and latency forecasting logic",
    "baseline: marks tests for historical cost/latency baseline management",
    "intent_graph: marks tests for intent graph accumulation logic",
    "transition: marks tests for intent transition edge accumulation",
]
